--- a/kapia.html
+++ b/kapia.html
@@ -6,11 +6,11 @@
 
 </head>
 <body>
-  <h1><a href="index.html">테스트 목차로 돌아가기</a></h1>
+  <h1><a href="index.html">해양 경찰 재난 상황판 Test 용</a></h1>
   <ol>
-    <a href="1.html" target=""><li>HTML</li></a>
-    <a href="2.html" target=""><li>CSS</li></a>
-    <a href="3.html" target=""><li>JavaScript</li></a>
+    <a href="1.html" target=""><li>이것은 예시용</li></a>
+    <a href="2.html" target=""><li>html링크와 연결이 되는건가</li></a>
+    <a href="3.html" target=""><li>DB연결성도 생각하면서 설계</li></a>
     <a href="kapia.html" target=""><li>kakao api</li></a>
   </ol>
 <!-- 지도를 표시할 div 입니다 -->
