--- a/kapia.html
+++ b/kapia.html
@@ -19,7 +19,7 @@
 <div id="map" style="width:100%;height:350px;"></div>
 <p>개발자도구를 통해 직접 확인해 보세요.</p>
     
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=발급받은 APP KEY를 사용하세요"></script>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7d5da5410ccce67dfa41cf70d49c80ac"></script>
 <script>
 var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
     mapOption = { 
