--- a/kapia.html
+++ b/kapia.html
@@ -6,18 +6,17 @@
     
 </head>
 <body>
-    <h1><a href="index.html">해양 경찰 재난 상황판 Test 용</a></h1> 
+<!--     <h1><a href="index.html">해양 경찰 재난 상황판 Test 용</a></h1> 
     <ol> <a href="1.html" target=""><li>이것은 예시용</li></a> 
         <a href="2.html" target=""><li>클릭 시 정보 전달부분 생각</li></a> 
         <a href="3.html" target=""><li>좌 우측 DB데이터 출력 테이블 설계</li></a> 
-        <a href="kapia.html" target=""><li>kakao api</li></a> </ol>
+        <a href="kapia.html" target=""><li>kakao api</li></a> </ol> -->
 <p style="margin-top:-12px">
     <em class="link">
-        <a href="/web/documentation/#MapTypeId" target="_blank">지도 타입을 보시려면 여기를 클릭하세요!</a>
+<!--         <a href="/web/documentation/#MapTypeId" target="_blank">지도 타입을 보시려면 여기를 클릭하세요!</a> -->
     </em>
 </p>
 <div id="map" style="width:100%;height:350px;"></div>
-<p>개발자도구를 통해 직접 확인해 보세요.</p>
     
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7d5da5410ccce67dfa41cf70d49c80ac"></script>
 <script>
