--- a/kapia.html
+++ b/kapia.html
@@ -40,7 +40,7 @@ kakao.maps.event.addListener(map, 'click', function(mouseEvent) {
     marker.setPosition(latlng);
     
     var message = '위도 값 = ' + latlng.getLat() + ', ';
-    message += ' 값 =' + latlng.getLng() + '';
+    message += '경도 값 =' + latlng.getLng() + '';
     
     var resultDiv = document.getElementById('result'); 
     resultDiv.innerHTML = message;
