--- a/kapia.html
+++ b/kapia.html
@@ -19,7 +19,7 @@
 <script>
 var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
     mapOption = { 
-        center: new kakao.maps.LatLng(35.835920, 128.54176289), // 지도의 중심좌표
+        center: new kakao.maps.LatLng(36.146257218099095, 129.50686292817883), // 지도의 중심좌표
         level: 11 // 지도의 확대 레벨
     };
 
