--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <a href="2.html" target=""><li>CSS</li></a>
     <a href="3.html" target=""><li>JavaScript</li></a>
     <a href="kapia.html" target=""><li>kakao api</li></a>
+    <a href="kakaoMap.html" target=""><li>kakaomap확인</li></a>
+    
   </ol>
 
 
