--- a/kakaoMap.html
+++ b/kakaoMap.html
@@ -35,7 +35,7 @@
 <body>
     <div id="map" style="width:100%; height:100%; "></div>
     <div class="test"> HIHI </div>
-    <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=f4886b42ab4ed72181f7a6fdc22d2a48&libraries=services"></script>
+    <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=7d5da5410ccce67dfa41cf70d49c80ac"></script>
     <script>
         //지도 생성
         var mapContainer = document.getElementById('map'), mapOption = { center: new kakao.maps.LatLng(33.450701, 126.570667), level: 4 };
