--- a/kakaoMap.html
+++ b/kakaoMap.html
@@ -46,8 +46,8 @@
         map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
 
         //재난 마커 이미지
-        var acc_imageSrc = 'acc3.png', // 마커이미지의 주소입니다
-            ship_imageSrc = 'ship1.png',
+        var acc_imageSrc = 'https://github.com/yoonseonghan/web1/blob/main/image/acc3.png', // 마커이미지의 주소입니다
+            ship_imageSrc = 'https://github.com/yoonseonghan/web1/blob/main/image/ship1.png',
             acc_imageSize = new kakao.maps.Size(64, 69), // 마커이미지의 크기입니다
             acc_imageOption = { offset: new kakao.maps.Point(27, 69) }; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
 
