--- a/kapia.html
+++ b/kapia.html
@@ -37,7 +37,8 @@ kakao.maps.event.addListener(map, 'click', function(mouseEvent) {
     
     // 클릭한 위도, 경도 정보를 가져옵니다 
     var latlng = mouseEvent.latLng;
-    marker.setPosition(latlng);
+     // 마커 위치를 클릭한 위치로 옮깁니다
+    //marker.setPosition(latlng);
     
     var message = '위도 값 = ' + latlng.getLat() + ', ';
     message += '경도 값 =' + latlng.getLng() + '';
