--- a/kapia.html
+++ b/kapia.html
@@ -54,6 +54,10 @@ var mapTypeControl = new kakao.maps.MapTypeControl();
 
 // 지도 타입 컨트롤을 지도에 표시합니다
 map.addControl(mapTypeControl, kakao.maps.ControlPosition.TOPRIGHT);
+    
+//zoom control 생성
+var zoomControl = new kakao.maps.ZoomControl();
+map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
 
 function getInfo() {
     // 지도의 현재 중심좌표를 얻어옵니다 
